# internal/handler/disciplines.go
@@ -73,7 +73,7 @@ func (h *Handler) createDiscipline(c *fiber.Ctx) error {
 // @Failure 400 {object} map[string]interface{}
 // @Failure 500 {object} map[string]interface{}
 // @Failure default {object} map[string]interface{}
-// @Router /api/v1/coding-lab/disciplines/:id [put]
+// @Router /api/v1/coding-lab/disciplines/{id} [put]
 func (h *Handler) updateDiscipline(c *fiber.Ctx) error {
 	l := logging.LoggerFromContext(c.UserContext())
 	l.Info("Updating a discipline... ")
@@ -130,7 +130,7 @@ func (h *Handler) updateDiscipline(c *fiber.Ctx) error {
 // @Success 200 {object} string "Discipline deleted"
 // @Failure 500 {object} map[string]interface{}
 // @Failure default {object} map[string]interface{}
-// @Router /api/v1/coding-lab/discipline/:id [delete]
+// @Router /api/v1/coding-lab/discipline/{id} [delete]
 func (h *Handler) deleteDiscipline(c *fiber.Ctx) error {
 	l := logging.LoggerFromContext(c.UserContext())
 	l.Info("Deleting a discipline")
@@ -171,7 +171,7 @@ func (h *Handler) deleteDiscipline(c *fiber.Ctx) error {
 // @Failure 400,404 {object} map[string]interface{}
 // @Failure 500 {object} map[string]interface{}
 // @Failure default {object} map[string]interface{}
-// @Router /api/v1/coding-lab/discipline/:id [get]
+// @Router /api/v1/coding-lab/discipline/{id} [get]
 func (h *Handler) getDisciplineByID(c *fiber.Ctx) error {
 	l := logging.LoggerFromContext(c.UserContext())
 	l.Info("Getting discipline by id... ")
